fixed mobile horizontal scrolling

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -34,7 +34,7 @@ footer.navbar {
   bottom: 0;
   left: 0;
   padding: 0;
-  margin: 0;
+  margin: auto;
   background-color: #ffffff;
   text-align: center;
   opacity: 0.7;
@@ -46,7 +46,6 @@ footer.navbar {
   a {
   	font-size: 4rem;
   }
-
 
 
 //social button animation and f/x
